--- a/app/boards/shields/mousetrap/mousetrap.conf
+++ b/app/boards/shields/mousetrap/mousetrap.conf
@@ -5,3 +5,6 @@ CONFIG_ZMK_USB_LOGGING=y
 CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=n
 #CONFIG_BT_PERIPHERAL_PREF_MIN_INT=6
 #CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
+
+CONFIG_SPI=y
+CONFIG_ADNS5030=y
